build package github